--- a/base/build.gradle
+++ b/base/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     api "androidx.constraintlayout:constraintlayout:2.0.0-beta6"
     api "androidx.fragment:fragment-ktx:1.3.0-alpha05"
     api "androidx.viewpager2:viewpager2:1.0.0"
-    api "com.google.android.material:material:1.2.0-beta01"
+    api "com.google.android.material:material:1.3.0-alpha01"
     api "androidx.recyclerview:recyclerview:1.2.0-alpha03"
 
     //glide
@@ -55,13 +55,14 @@ dependencies {
     api "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    //gson
-    api "com.google.code.gson:gson:2.8.5"
+    //moshi
+    api("com.squareup.moshi:moshi-kotlin:1.9.2")
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
 
     //retrofit
     def retrofit_version = "2.9.0"
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
-    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    api "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     //okhttp
     def okhttp_version = "4.7.2"
