--- a/base/build.gradle
+++ b/base/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     // ui--------------------------------------------------
-    api "androidx.constraintlayout:constraintlayout:2.0.0-beta6"
-    api "androidx.fragment:fragment-ktx:1.3.0-alpha05"
+    api "androidx.constraintlayout:constraintlayout:2.0.0-beta7"
+    api "androidx.fragment:fragment-ktx:1.3.0-alpha06"
     api "androidx.viewpager2:viewpager2:1.0.0"
     api "com.google.android.material:material:1.3.0-alpha01"
     api "androidx.recyclerview:recyclerview:1.2.0-alpha03"
@@ -73,7 +73,7 @@ dependencies {
     api 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     //-------------------------------jetpack---------------------------
-    def nav_version = "2.3.0-beta01"
+    def nav_version = "2.3.0-rc01"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
     api "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -102,7 +102,7 @@ dependencies {
     def truthVersion = '0.42'
     def testExtJunit = '1.1.0'
     def espressoVersion = '3.2.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation "androidx.arch.core:core-testing:$coreTestingVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
@@ -111,4 +111,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$testExtJunit"
     androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiAutomatorVersion"
     androidTestImplementation "com.google.truth:truth:$truthVersion"
+
+    //animation
+    api 'com.github.florent37:viewanimator:1.1.0'
 }
