room 体验, recycle 老是忘记加manager,room 的操作都要放在子线程

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api project(":base")
-
+    kapt "androidx.room:room-compiler:2.2.5"
 }
